fix wrap

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ nav::after {
 
 #coffee_img {
     margin-top: 2%;
-    max-width: 500px;
+    max-width: 470px;
 }
 
 /* The image fills the container */
